# company_name_matcher

./: .bandit  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pyre-configuration  CONTRIBUTING.md  README.md  demo.ipynb  pyproject.toml  pytype.cfg  requirements.txt  setup.py
.github/workflows/: sync-branches.yml  test-dev-to-main.yml  test-pr-to-dev.yml  validate-data.yml
data/: README.md  US_001.csv
data/_reference/: countrycode.csv
data/negative/: 001.csv  DE_US.parquet  FR_US.parquet  README.md  US_US.parquet
data/positive/: 001.csv  CN.parquet  IN.parquet  KR.parquet  README.md  TW.parquet  US.parquet
models/: __init__.py
scripts/: validate_data.py
src/: __init__.py  company_name_matcher.py
src/company_name_matcher/: __init__.py  company_name_matcher.py  environment.py  vector_store.py
tests/: conftest.py  test_batch_processing.py  test_comparison.py  test_data.csv  test_default_matcher.py  test_model_comparison.py  test_validate_data.py
typings/h5py/: __init__.pyi
typings/joblib/: __init__.pyi
typings/sentence_transformers/: __init__.pyi
typings/sklearn/cluster/: __init__.pyi
