[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "company_name_matcher"
version = "0.1.0"
authors = [
    {name = "Eason Suen", email = "easonssuen@gmail.com"}
]
description = "A library for matching and comparing company names using a fine-tuned sentence transformer model"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Homepage = "https://github.com/easonanalytica/company_name_matcher"
"Bug Tracker" = "https://github.com/easonanalytica/company_name_matcher/issues"

[tool.setuptools.packages.find]
where = ["src"] 